--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-server.port=8082
-spring.security.user.name=bagan
-spring.security.user.password=bagan123
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store:src/main/resources/bootsecurity.p12
+server.ssl.key-store-password:springsecurity
+server.ssl.key-store-type:PKCS12
+server.ssl.key-alias:bootsecurity
